Skip to content

CMAKE_LINK_LIBRARY_FILE_FLAG does not behave like CMAKE_LINK_LIBRARY_FLAG.

By setting CMAKE_LINK_LIBRARY_FILE_FLAG a space is added between the linker flag and the library name. Some toolchains like ccrx (Renesas RX Compiler) do not like this. The attached patch is one way to solve this issue.

0001-Do-not-add-a-space-between-CMAKE_LINK_LIBRARY_FILE_F.patch

Edited by Brad King
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information